@@ -468,7 +468,12 @@ class Mapper(object):
                 session._register_new(self)
 
             if oldinit is not None:
-                oldinit(self, *args, **kwargs)
+                try:
+                    oldinit(self, *args, **kwargs)
+                except:
+                    if session is not None:
+                        session.expunge(self)
+                    raise
         # override oldinit, insuring that its not already a Mapper-decorated init method
         if oldinit is None or not hasattr(oldinit, '_sa_mapper_init'):
             init._sa_mapper_init = True
